# Personal-RAG-Assistant

./: .env.example  .gitignore  00_PLANEJAMENTO_PERSONAL_RAG_V1.md  01_SDD_Personal_RAG_V1.md  02_README.md  03_DIAGRAMAS_mermaid.md  04_ESTRUTURA_DO_PROJETO.md  05_PLANO_DE_FASES.md  Makefile  README.en.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: DIAGRAMS.md  EVALUATION.md  OVERVIEW.md  PROJECT_PLAN.md  PROJECT_STRUCTURE.md  PUBLISHING.md  SDD.md
docs/assets/: README.md
docs/retros/: 2026-07-16-fases-1-3.md  2026-07-16-fases-4-7.md
evaluation/: golden_set.json
scripts/: build_golden_set.py  check_links.py  hello.py
src/rag_assistant/: __init__.py  __main__.py  cli.py
src/rag_assistant/app/: backend.py  streamlit_app.py
src/rag_assistant/common/: cache.py  ratelimit.py
src/rag_assistant/config/: settings.py
src/rag_assistant/domain/: exceptions.py  models.py  ports.py
src/rag_assistant/embeddings/: factory.py  gemini_embeddings.py  ollama_embeddings.py
src/rag_assistant/evaluation/: evaluator.py  metrics.py  models.py  report.py
src/rag_assistant/llm/: factory.py  (+2 more)
tests/: conftest.py
tests/integration/: test_app_smoke.py  test_evaluator.py  test_pipeline.py  test_rag_pipeline.py  test_retrieval.py  test_vectorstore.py
tests/unit/: test_app_backend.py  test_cache.py  test_chunker.py  test_cli_errors.py  test_llm_provider.py  test_loaders.py  test_local_only.py  test_logging.py  test_metrics.py  test_pipeline_tracing.py  test_prompts.py  test_ratelimit.py  test_report.py  test_settings.py  test_tracer.py
(+10 files in other folders)
