[project]
name = "rag-assistant"
version = "0.1.0"
description = "Personal RAG Assistant V1 — local, source-cited, free-tier RAG over your own documents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Matheus Francisco" }]
dependencies = [
    "pydantic-settings>=2.5",
    "tenacity>=9.0",
    "typer>=0.12",
    "langchain-core>=0.3",
    "langchain-text-splitters>=0.3",
    "langchain-ollama>=0.2",
    "langchain-google-genai>=2.0",
    "chromadb>=0.5",
    "diskcache>=5.6",
    "pypdf>=5.0",
    "python-docx>=1.1",
    "streamlit>=1.40",
]

[project.scripts]
rag = "rag_assistant.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "pre-commit>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_assistant"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
markers = ["local_only: teste que não pode tocar a rede"]
